--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
